[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/dagger.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 41.6854

[node name="PlayerBullet" type="Area2D" groups=[
"Bullet",
]]
position = Vector2( 311, 83 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.83887, 29.3449 )
rotation = -4.79616
scale = Vector2( 1.40202, 1.70537 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 52.3259, 11.3137 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 50.9119, 12.3744 )
scale = Vector2( 4.46484, 4.85374 )

[connection signal="area_entered" from="." to="." method="_on_PlayerBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered1"]
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
